--- a/inicio.html
+++ b/inicio.html
@@ -22,13 +22,8 @@
       #navbarSupportedContent{
         margin-left: 20%;
       }
-
-      footer{
-        clear: both;
-       text-align: center;
-          border-top: 2px solid #999999;
-          width: 100%;
-
+      #contenido{
+        width: 100%;
       }
           h2{
              margin-top:200px;
@@ -192,24 +187,17 @@
            opacity: 0.4;
         }
     </style>
-<<<<<<< HEAD
-
-
-
-=======
     <script type="text/javascript">
       $(document).ready(function() {
-        // $(".tercera,.segunda").css("display","none");
-        $(".tercera").hide();
-        $(".segunda").hide();
+        $(".tercera,.segunda").css("display","none");
+        // $(".tercera").hide();
+        // $(".segunda").hide();
         var contador = 0;
         $(".izquierda").click(function(){
           contador++;
           if (contador==1) {
-            // $(".segunda").css("display","block");
-            // $(".primera").css("display","none");
             $(".primera").hide();
-            $(".segunda").fadeIn();
+            $(".segunda").fadeIn(2000);
 
           }else if (contador==2) {
             // $(".tercera").css("display","block");
@@ -223,7 +211,7 @@
         })
       });
     </script>
->>>>>>> e1c7ff720f4803930c6d98b4608e25891069e372
+
 </head>
 
 <body>
@@ -284,9 +272,9 @@
               </div>
             </div>
 
-<<<<<<< HEAD
-            <div class="somosdiferente col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-=======
+
+
+
             <div class="contacto row col-xl-5 offset-xl-5">
               <div class="primera">
                 <h1>HOLA :)</h1>
@@ -298,7 +286,11 @@
                   gran iniciativa en el mundo digital, difrutamos de lo que hacemos.</p>
               </div>
               <div class="segunda">
-                <p>segunda</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                  labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                   nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+                   esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
+                    in culpa qui officia deserunt mollit anim id est laborum.</p>
               </div>
               <div class="tercera">
                 <p>tercero</p>
@@ -307,7 +299,6 @@
 
 
             <div class="somosdiferente col-xl-12">
->>>>>>> e1c7ff720f4803930c6d98b4608e25891069e372
               <h2>SOMOS DIFERENTES</h2>
               <p>Dedicamos muchas horas a innovar</p>
               <p>solucionamos problemas y creamos todo aquello que quieras reflejar en una web</p>
@@ -316,7 +307,7 @@
               <h2>SERVICIOS</h2>
             </div>
 
-                     <div class="servicios1 col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4">
+                    <div class="servicios1 col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4">
                        <img src="inicio/tiendaOnline.png" alt="" id="tienda">
                      </div>
                      <div class="servicios1 col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4">
@@ -330,17 +321,10 @@
                      </div>
                      <div class="servicios1 col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4">
                          <img src="inicio/corporativa.png" alt="" id="corp">
-                     </div>
+                    </div>
 
-                   </div>
-                       <hr>
 
-<<<<<<< HEAD
-                            
 
-                   <div class="row">
-                       <h2 class="trabajos">ALGUNOS TRABAJOS</h2>
-=======
                    <div class="row">
                      <h2 class="trabajos">ALGUNOS TRABAJOS</h2>
                     <div class="catalogo col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4">
@@ -353,27 +337,13 @@
                       <img src="inicio/moda.jpg" alt="">
                     </div>
                   </div>
->>>>>>> e1c7ff720f4803930c6d98b4608e25891069e372
-
-                     <div class="catalogo col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4">
-                       <img src="inicio/clinica.jpg" alt="" id="clinica">
-
-                     </div>
-                     <div class="catalogo col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4">
-                       <img src="inicio/cafeteria.jpg" alt="">
-
-                     </div>
-                     <div class="catalogo col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4">
-                       <img src="inicio/moda.jpg" alt="">
-
-                     </div>
-
-                   </div>
 
 
+
+</div>
 
     <div  id="pie" class="row bg-dark text-white ">
-      <footer></footer>
+
       <div class="col-xl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12">
         <h1>Contacta</h1>
         <i class="fas fa-phone fa-2x"></i>
@@ -393,18 +363,12 @@
       </div>
 
     </div>
+
   </div>
-
-    <!-- Inserta aquí los JS -->
-<<<<<<< HEAD
+</div>
     <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.12.0.min.js"></script>
-=======
-
->>>>>>> e1c7ff720f4803930c6d98b4608e25891069e372
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-
-
 </body>
 
 </html>
