--- a/Javi.html
+++ b/Javi.html
@@ -7,99 +7,26 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    <style>
-    header{
-      background-color: black;
-    }
-      #logo{
-        width: 15%;
-      }
-      #titulo{
-        margin-left: 45%;
-      }
-      #navbarSupportedContent{
-        margin-left: 20%;
-      }
-      #navbar{
-        height: 120px;
-      }
-      #javi{
-        margin-top: 200px;
-        width: 20%;
-        height: 20%;
-        margin-left: 20%;
-        float: left;
-        padding-right: 1%;
+    <!-- link a el css del reproductor mp3 -->
+    <link rel="stylesheet" href="javi/reproductorCss.css">
+    <!-- link a el js del reproductor mp3 -->
+    <link rel="stylesheet" href="javi/reproductorScript.js">
+    <!-- link a el css general de la pagina javi.html -->
+    <link rel="stylesheet" href="javi/CssJaviHtml.css">
 
-
-
-      }
-      footer{
-        clear: both;
-       text-align: center;
-         padding: 20px;
-          border-top: 2px solid #999999;
-          width: 100%;
-      }
-          h2{
-             margin-top:200px;
-             margin-right:  10%;
-             padding-left:  20%;
-          }
-          #pie{
-            margin-top: 30%;
-          }
-          #mapa{
-            width: 25%;
-          }
-         .roja{
-           border: 1px solid black;
-           background: red;
-           width: 50px;
-           height: 25px;
-         }
-         .foto{
-           width: 250px;
-           height: 250px;
-           margin-top: 10%;
-           margin-left: 10%;
-         }
-         #proyectos{
-            margin-top: 10%;
-            margin-left: 35%;
-         }
-         iframe{
-           margin-top: -250px;
-           margin-left: 50%;
-         }
-         .comentario{
-        border-radius: 5px;
-        background-color: #62C0D5;
-        color: floralwhite;
-        padding: 10px;
-        width: 420px;
-        font-family: 'Indie Flower', cursive;
-        font-size: 2em;
-        margin-left: 10%;
-        margin-top: 15%
-        }
-
-
-    </style>
     <script type="text/javascript">
       $(document).ready(function(){
-        $('#foto1').click(function(){
-          $('.foto').slideToggle('slow'){
-            $(this).html('Proyecto realizado par una cafetería');
-          }
-
+        $('#foto1').hover(function(){
+          $(this).css("opacity","0.4");
+          $('</p>').css("color","red").html("Animaciones psicodelicas");
         });
-
+        $('#foto1').css("opacity","1");
 
       });
 
 
     </script>
+
 </head>
 
 <body>
@@ -150,25 +77,44 @@
         </div>
         <div class="row pt-5">
             <div class="">
-              <section class="row">
-                <article class="">
-
-                     <img src="quienesSomos/javi.jpg" alt="" id="Javi">
-                     <h2>JAVIER</h2>
-                     <p>En los proyectos me gusta dedicarme a la parte de animaciones, musica y video. Utilizo CSS3 , HTML5 y JQUERY. <br> Tengo una actitud reservada, soy observador , meticuloso, metodico y paciente. Me gusta la logica y soy autodidacta. Me considero una persona centrada con toques de "sana locura".</p>
-
-                     <h3 id="proyectos">PROYECTOS REALIZADOS</h3>
-                     <img src="javi/foto1.jpg" alt="" class="foto" id="foto1">
-                     <!-- <p>Proyecto realizado para una cafetería.</p> -->
-                     <img src="javi/foto2.jpg" alt="" class="foto" id="foto2">
-                     <!-- <p>Proyecto realizado para una bodega</p> -->
-                     <img src="javi/foto3.jpg" alt="" class="foto" id="foto3">
-                     <!-- <p>Proyecto realizado para una tienda de ropa</p> -->
-                     <div class="comentario">
-                       <p>"Algunas personas quieren que algo ocurra, otras sueñan con que pasara, otras hacen que suceda " <strong>Michael Jordan</strong></p>
-
+              <section class="row col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                <article class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                  <img src="quienesSomos/javi.jpg" alt="" id="Javi">
+                  <h2>JAVIER</h2>
+                  <p>En los proyectos me gusta dedicarme a la parte de animaciones, musica y video. Utilizo CSS3 , HTML5 y JQUERY. <br> Tengo una actitud reservada, soy observador , meticuloso, metodico y paciente. Me gusta la logica y soy autodidacta. Me considero una persona centrada con toques de "sana locura".</p>
+                </article>
+                <article class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                  <h3 id="proyectos">PROYECTOS REALIZADOS</h3>
+                  <img src="javi/foto1.jpg" alt="" class="foto" id="foto1">
+                  <!-- <img src="javi/imagen.png" alt="" id="infoFoto1"> -->
+                  <img src="javi/foto2.jpg" alt="" class="foto" id="foto2">
+                  <!-- <p>Proyecto realizado para una bodega</p> -->
+                  <img src="javi/foto3.jpg" alt="" class="foto" id="foto3">
+                  <!-- <p>Proyecto realizado para una tienda de ropa</p> -->
+                </article>
+                <div class="dropdown-divider"></div>
+                <article class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6">
+                  <div class="comentario">
+                    <p>"Some people want something to happen, others dream of it happening , others make it happen" <strong>Michael Jordan</strong></p>
+                  </div>
+                </article>
+                <article class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6">
+                  <div class="reproductor">
+                    <audio id="player">
+                         <!-- Audio Ogg -->
+                         <source src="javi/audio/.ogg" type="audio/ogg">
+                         <!-- Audio MP3 -->
+                         <source src="javi/audio/.mp3" type="audio/mpeg"/>
+                     </audio>
+                     <div class="contenedor as">
+                       <span class="masVol" onclick="document.getElementById('player').volume+=0.1"></span>
+                       <span class="menosVol" onclick="document.getElementById('player').volume-=0.1"></span>
+                       <span class="play" onclick="document.getElementById('player').play()"></span>
+                       <span class="mute" onclick="mute()"></span>
+                       <span class="stop" onclick="document.getElementById('player').pause()"></span>
                      </div>
-                     <iframe width="560" height="315" src="https://www.youtube.com/embed/NJ8jxvzzzeQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                  </div>
+                </article>
 
 
 
@@ -183,15 +129,14 @@
       <div class="col-xl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12">
         <h1>Contacta</h1>
         <i class="fas fa-phone fa-2x"></i>
-        <a href="tel:+34555000555">555-000-555</a><br>
+        <a href="tel:+34628152140">628-152-140</a><br>
         <i class="fas fa-at fa-2x"></i>
-        <a href="mail:correo@gmail.com">correo@gmail.com</a>
+        <a href="mail:javinico08@gmail.com">Javinico08@gmail.com</a>
       </div>
       <div class="col-xl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12">
-        <h1>Servicios</h1>
-        <a href="#">Desarrollo web</a><br>
-        <a href="#">Desarrollo cliente</a><br>
-        <a href="#">Desarrollo Servidor</a>
+        <h1>Especialidades</h1>
+        <p>Diseño web</p>
+        <p>Desarrollo cliente</p>
       </div>
       <div class="col-xl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12">
         <h1>Oficinas</h1>
@@ -202,7 +147,7 @@
   </div>
 
     <!-- Inserta aquí los JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.12.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 
